# bookmark-clustering

./: .gitignore  README.md  clustering_experiment.ipynb  pyproject.toml
src/: main.py
src/bookmarks-cluster/: firefox_loader.py  main.py
src/bookmarks_cluster/: bookmark_types.py  cluster.py  db.py  embed.py  link_fetcher.py  llm.py  summarize.py
src/bookmarks_cluster/firefox/: ff_cache.py  ff_loader.py
