[project]
name = "bookmark-cluster"
version = "0.1.0"
description = "Spectral clustering for bookmarks"
requires-python = ">=3.12"
dependencies = [
    # url fetching encounters ocassional website roadblocks
    "selenium",
    "selenium-stealth",
    # pgserver for local RAG
    "pgserver",
    "psycopg~=3.3.3",
    # LM Studio integration for content extraction
    "lmstudio",
    "openai",
    # for clustering
    "numpy",
    "scikit-learn",
]
